[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/combat-vehicle-sprites-/PNG/05/3.png" type="Texture" id=1]
[ext_resource path="res://Assets/combat-vehicle-sprites-/PNG/05/2.png" type="Texture" id=2]
[ext_resource path="res://Assets/combat-vehicle-sprites-/PNG/05/4.png" type="Texture" id=3]
[ext_resource path="res://Assets/combat-vehicle-sprites-/PNG/05/1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 155.893, 59.8252 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_mask = 14
script = ExtResource( 5 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 36.7696, 0 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 1.8, 1.8 )
limit_left = -1550
limit_top = -1750
limit_right = 5900
limit_bottom = 780
smoothing_speed = 10.0
[connection signal="activate_gravity" from="." to="." method="_on_Player_activate_gravity"]
